fixed the delete function and array populates normally

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
 
     <ul>
       {{#myBooks}}
-      <li>{{title}}, {{author}}</li>
+      <li>{{title}}, {{author}} <a href="/del/{{@index}}">[x]</a></li>
       {{/myBooks}}
     </ul>
 
